feat(agent): 建立Qwen三档解释v4编译链