@@ -8,20 +8,20 @@ import java.util.Set;
 
 /**
  * 通用能力草稿的语义校验器：在 {@link GeneralDraftCodec} 结构解码通过后，
- * 再按请求意图校验草稿的语义正确性（主题一致、角色结构、覆盖矩阵、中文句式），
+ * 再按请求意图校验草稿的可确定语义（主题一致、角色结构、可信 role aspects、中文句式），
  * 通过则升格为 {@link GeneralSemanticResult}。
  *
  * <p>fail-closed：任何语义偏差都以封闭的
  * {@link GeneralDraftValidationException.Reason} 拒绝，异常文本不携带
  * Provider 原始输出。校验规则按请求 Kind 分叉——EXPLANATION 要求
- * "定义 + 机制"两条陈述、深度决定句数区间与 Aspect 覆盖集；COMPARISON 要求
+ * "定义 + 机制"两条陈述、深度决定句数区间且 aspect 只标记相同 role；COMPARISON 要求
  * 全部陈述为对比角色、subject×dimension 配对精确覆盖且不重复、不携带 aspects。
  */
 public final class GeneralDraftValidator {
     /**
      * 校验草稿并升格为语义结果：先核对主题（EXPLANATION 用 topic，
      * COMPARISON 用 "A vs B" 拼接），再按 Kind 走对应的质量/覆盖校验，
-     * 最后校验 caveats 去重与句式。
+     * 最后按 canonical 版本校验 caveats 句式及历史兼容约束。
      *
      * @throws GeneralDraftValidationException 任一语义规则不满足；Reason 标识具体类别
      */
@@ -31,28 +31,41 @@ public final class GeneralDraftValidator {
             reject(GeneralDraftValidationException.Reason.TOPIC_MISMATCH,
                     "draft topic does not match request");
         }
-        List<GeneralSemanticResult.Statement> statements = draft.statements().stream()
-                .map(value -> new GeneralSemanticResult.Statement(
-                        value.role(), value.text(), value.subject(), value.dimension()))
-                .toList();
         if (request.getKind() == GeneralKnowledgeRequest.Kind.EXPLANATION) {
-            if (statements.size() != 2
-                    || statements.get(0).getRole() != GeneralSemanticResult.Role.DEFINITION
-                    || statements.get(1).getRole() != GeneralSemanticResult.Role.MECHANISM) {
+            if (draft.statements().size() != 2
+                    || draft.statements().get(0).role()
+                            != GeneralSemanticResult.Role.DEFINITION
+                    || draft.statements().get(1).role()
+                            != GeneralSemanticResult.Role.MECHANISM
+                    || draft.statements().stream().anyMatch(value ->
+                            value.subject() != null || value.dimension() != null)) {
                 reject(GeneralDraftValidationException.Reason.EXPLANATION_ROLES_INVALID,
                         "explanation roles are invalid");
             }
             validateExplanationQuality(request, draft);
         } else {
+            if (draft.statements().stream().anyMatch(value ->
+                    value.role() != GeneralSemanticResult.Role.COMPARISON
+                            || value.subject() == null
+                            || value.dimension() == null)) {
+                reject(GeneralDraftValidationException.Reason.COMPARISON_ROLE_INVALID,
+                        "comparison contains an invalid role or pair");
+            }
+        }
+        List<GeneralSemanticResult.Statement> statements = draft.statements().stream()
+                .map(value -> new GeneralSemanticResult.Statement(
+                        value.role(), value.text(), value.subject(), value.dimension()))
+                .toList();
+        if (request.getKind() == GeneralKnowledgeRequest.Kind.COMPARISON) {
             validateComparisonCoverage(request, statements);
             if (draft.statements().stream().anyMatch(value -> !value.aspects().isEmpty())) {
                 reject(GeneralDraftValidationException.Reason.COMPARISON_ASPECTS_INVALID,
                         "comparison aspects must be empty");
             }
-            statements.forEach(statement -> validateChineseSentences(
+            statements.forEach(statement -> validateHistoricalChinesePeriodSentences(
                     statement.getText(), 1, 3, "comparison text"));
         }
-        validateCaveats(draft.caveats());
+        validateCaveats(request, draft);
         return new GeneralSemanticResult(
                 draft.topic(), statements,
                 draft.caveats().stream().map(GeneralDraftCodec.CaveatDraft::text).toList(),
@@ -62,34 +75,37 @@ public final class GeneralDraftValidator {
     /**
      * EXPLANATION 质量校验：按深度（CONCISE/STANDARD/DETAILED）约束每条陈述的
      * 中文总句数区间；要求首条陈述标注 DEFINITION、次条标注 MECHANISM，且全部
-     * Aspect 的并集精确等于该深度期望的覆盖集（多一分少一分都拒绝）。
+     * 两条 statement 只携带与自身 role 相同的可信 aspect，不用关键词伪证细粒度覆盖。
      */
     private void validateExplanationQuality(
             GeneralKnowledgeRequest request, GeneralDraftCodec.Draft draft) {
         GeneralDraftRules.ExplanationRule rule = GeneralDraftRules.explanation(
                 request.getDepth());
-        int sentenceCount = draft.statements().stream()
-                .mapToInt(statement -> countChineseSentences(
-                        statement.text(), "explanation text"))
-                .sum();
+        int definitionSentences = countChineseSentences(
+                draft.statements().get(0).text(), "definition text");
+        int mechanismSentences = countChineseSentences(
+                draft.statements().get(1).text(), "mechanism text");
+        if (definitionSentences < rule.minimumSentencesPerRole()
+                || definitionSentences > rule.maximumSentencesPerRole()
+                || mechanismSentences < rule.minimumSentencesPerRole()
+                || mechanismSentences > rule.maximumSentencesPerRole()) {
+            reject(GeneralDraftValidationException.Reason
+                            .LANGUAGE_OR_SENTENCE_COUNT_INVALID,
+                    "explanation text has invalid language or sentence count");
+        }
+        int sentenceCount = definitionSentences + mechanismSentences;
         if (sentenceCount < rule.minimumCanonicalSentences()
                 || sentenceCount > rule.maximumCanonicalSentences()) {
             reject(GeneralDraftValidationException.Reason
                             .LANGUAGE_OR_SENTENCE_COUNT_INVALID,
                     "explanation text has invalid language or sentence count");
         }
-        if (!draft.statements().get(0).aspects().contains(
-                rule.definitionAspects().getFirst())
-                || !draft.statements().get(1).aspects().contains(
-                rule.mechanismAspects().getFirst())) {
+        if (!draft.statements().get(0).aspects().equals(
+                Set.copyOf(rule.definitionAspects()))
+                || !draft.statements().get(1).aspects().equals(
+                Set.copyOf(rule.mechanismAspects()))) {
             reject(GeneralDraftValidationException.Reason.EXPLANATION_ROLE_ASPECTS_INVALID,
                     "explanation role aspects are invalid");
-        }
-        Set<GeneralDraftCodec.Aspect> actual = EnumSet.noneOf(GeneralDraftCodec.Aspect.class);
-        draft.statements().forEach(statement -> actual.addAll(statement.aspects()));
-        if (!actual.equals(rule.coverage())) {
-            reject(GeneralDraftValidationException.Reason.EXPLANATION_COVERAGE_INVALID,
-                    "explanation semantic coverage is invalid");
         }
     }
 
@@ -124,14 +140,24 @@ public final class GeneralDraftValidator {
         }
     }
 
-    /** caveats 校验：每条 1..2 句中文，正文归一化后与类别均不得重复。 */
-    private void validateCaveats(List<GeneralDraftCodec.CaveatDraft> caveats) {
+    /** v3 caveat 可同类并列；v2 保留已发布的 kind/text 唯一性与句号规则。 */
+    private void validateCaveats(
+            GeneralKnowledgeRequest request, GeneralDraftCodec.Draft draft) {
+        List<GeneralDraftCodec.CaveatDraft> caveats = draft.caveats();
+        boolean legacyV2 = "general.draft.v2".equals(draft.schemaVersion());
         Set<String> texts = new HashSet<>();
         Set<GeneralDraftCodec.CaveatKind> kinds = EnumSet.noneOf(
                 GeneralDraftCodec.CaveatKind.class);
         for (GeneralDraftCodec.CaveatDraft caveat : caveats) {
-            validateChineseSentences(caveat.text(), 1, 2, "caveat");
-            if (!texts.add(normalize(caveat.text())) || !kinds.add(caveat.kind())) {
+            if (legacyV2 || request.getKind()
+                    == GeneralKnowledgeRequest.Kind.COMPARISON) {
+                validateHistoricalChinesePeriodSentences(
+                        caveat.text(), 1, 2, "caveat");
+            } else {
+                validateChineseSentences(caveat.text(), 1, 2, "caveat");
+            }
+            if (legacyV2 && (!texts.add(normalize(caveat.text()))
+                    || !kinds.add(caveat.kind()))) {
                 reject(GeneralDraftValidationException.Reason.CAVEAT_DUPLICATE,
                         "caveats contain duplicates");
             }
@@ -154,18 +180,50 @@ public final class GeneralDraftValidator {
     }
 
     private int countChineseSentences(String text, String name) {
+        int count = 0;
+        int segmentStart = 0;
+        for (int index = 0; index < text.length();) {
+            int codePoint = text.codePointAt(index);
+            int next = index + Character.charCount(codePoint);
+            if ("。！？!?".indexOf(codePoint) >= 0) {
+                String segment = text.substring(segmentStart, index);
+                if (!GeneralDraftRules.isChineseDominant(segment)) {
+                    reject(GeneralDraftValidationException.Reason
+                                    .LANGUAGE_OR_SENTENCE_COUNT_INVALID,
+                            name + " has invalid language or sentence count");
+                }
+                count++;
+                segmentStart = next;
+            }
+            index = next;
+        }
+        String suffix = text.substring(segmentStart);
+        if (count == 0 || suffix.codePoints().anyMatch(codePoint ->
+                "”’」』）》】".indexOf(codePoint) < 0
+                        && !Character.isWhitespace(codePoint))) {
+            reject(GeneralDraftValidationException.Reason.SENTENCE_BOUNDARY_INVALID,
+                    name + " has invalid sentence boundaries");
+        }
+        return count;
+    }
+
+    /** v2 Comparison 的历史边界：只认中文句号，不接纳其他句末符或引号后缀。 */
+    private void validateHistoricalChinesePeriodSentences(
+            String text, int minimum, int maximum, String name) {
         if (!text.endsWith("。") || text.matches(".*[.!?！？].*")) {
             reject(GeneralDraftValidationException.Reason.SENTENCE_BOUNDARY_INVALID,
                     name + " has invalid sentence boundaries");
         }
         List<String> sentences = java.util.Arrays.stream(text.split("。", -1))
-                .filter(value -> !value.isBlank()).toList();
-        if (sentences.isEmpty()
-                || sentences.stream().anyMatch(value -> !value.matches(".*[\\p{IsHan}].*"))) {
-            reject(GeneralDraftValidationException.Reason.LANGUAGE_OR_SENTENCE_COUNT_INVALID,
+                .filter(value -> !value.isBlank())
+                .toList();
+        if (sentences.size() < minimum || sentences.size() > maximum
+                || sentences.stream().anyMatch(value ->
+                        !GeneralDraftRules.isChineseDominant(value))) {
+            reject(GeneralDraftValidationException.Reason
+                            .LANGUAGE_OR_SENTENCE_COUNT_INVALID,
                     name + " has invalid language or sentence count");
         }
-        return sentences.size();
     }
 
     /** 统一拒绝出口：所有校验失败都转换为带封闭 Reason 的校验异常。 */
